smoothed the outreach

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -401,19 +401,19 @@ B14 Lab course on Image Analysis (Hilary'17)
         <div class="my-auto">
         <h2 class="mb-5">Outreach</h2>
         <p class="lead mb-5">
-09/18: I volunteered for the University-wide Open Day at the <a href="http://www.cs.ox.ac.uk/">CS department</a> and presented a realtime demo of my work on realtime instance segmentation. A teaser <a href="./news/listentoSee_demo.html">here</a>.
+09/18: I presented my work on realtime instance segmentation at the <a href="http://www.cs.ox.ac.uk/">CS dept.</a> open-day.
 <br/>
-06/18 to present: I have taken the position of <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">Outreach & Scholarship officer</a> with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19.
+06/18 to present: I will be the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">Outreach & Scholarship officer</a> for <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19.
 <br/>
-06/18: I co-organised a coding workshop using <a href="https://www.youtube.com/watch?v=0yQYr7CIxBc&feature=youtu.be">spheros</a> as part of the <a href="https://www.cs.ox.ac.uk/conferences/InspireHer/">InspireHer!</a> series.
+06/18: I co-organised a coding masterclass for girls aged 9-12 using <a href="https://www.youtube.com/watch?v=0yQYr7CIxBc&feature=youtu.be">spheros</a> as part of the <a href="https://www.cs.ox.ac.uk/conferences/InspireHer/">InspireHer!</a> series.
 <br/>
-05/18: I co-organised a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a> at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.
+05/18: I co-organised a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop for students aged 12-13</a> at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.
 <br/>
-06/17 to 05/18: I served as the Industry coordinator and External relations officer with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2017-18.
+06/17 to 05/18: I was the Industry coordinator and External relations officer with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a>.
 <br/>
-05/17 to 06/17: As a student outreach ambassador for the <a href="http://www.eng.ox.ac.uk/">Department of Engineering Science, University of Oxford</a>, I have engaged with yr. 11, 12 & 13 school students at a host of events including - <a href="https://www.oxengscioutreach.com/events">Lubbock lectures for schools, International Women in Engineering Day and Engineering Open Days</a>. One set of slides especially popular amongst students during my classroom talks can be found <a href="./news/AI_for_visualperception_slides.html">here</a>.
+05/17 to 06/17: As a student outreach ambassador for the <a href="http://www.eng.ox.ac.uk/">Department of Engineering Science, University of Oxford</a>, I have engaged with yr. 11-13 students at a host of events including - <a href="https://www.oxengscioutreach.com/events">Lubbock lectures for schools, International Women in Engineering Day and Engineering Open Days</a>. One set of slides especially popular amongst students during my classroom talks can be found <a href="./news/AI_for_visualperception_slides.html">here</a>.
 <br/>
-06/17: I gave a talk under the theme of 'Mobile Robotics' for the <a href="https://www.cs.ox.ac.uk/lookingforward/">Looking Forward</a> initiative of the Department of Computer Science, University of Oxford to encourage and motivate girl students towards STEM.
+06/17: I gave a talk under the theme of 'Mobile Robotics' for the <a href="https://www.cs.ox.ac.uk/lookingforward/">Looking Forward</a> initiative of the Department of Computer Science, University of Oxford to encourage and motivate girls aged 14-15 towards STEM.
 <br/>
 02/17 - 05/17: I served as a student volunteer with the <a href="https://www.sciencemuseum.org.uk/what-was-on/robots">Robots exhibition at the Science Museum London</a>, supported by the Royal Academy of Engineering. More details <a href="./news/robots_SML.html">here</a>.
 </p>
