added details of the TAO talk

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -119,9 +119,11 @@ In my spare time I run coding workshops for kids aged 9-12, write poetry, read s
         <div class="my-auto">
           <h2 class="mb-5">News</h2>
           <p class="lead mb-5">
+03/19: I gave a <a href="">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
+<br/>
 02/19: I will be a visiting researcher at <a href="https://five.ai/">FiveAI</a> starting this month.
 <br/>
-01/19: I submitted my thesis, wohoo! It is titled - 'Use and Examination of CNNs for Scene Understanding' (coming online soon).
+01/19: I submitted my thesis, wohoo! It is titled - 'Use and Examination of CNNs for Scene Understanding'.
 <br/>
 12/18: I gave a talk at the newly inaugurated <a href="https://www.wadhwaniai.org/">Wadhwani Institute, Mumbai</a>. 
 Such energy, great leadership, AI for social good in Indian space, ftw!
