making separate project pages for each project

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -119,7 +119,7 @@ In my spare time I run coding workshops for kids aged 9-12, write poetry, read s
         <div class="my-auto">
           <h2 class="mb-5">News</h2>
           <p class="lead mb-5">
-03/19: I gave a <a href="">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
+03/19: I gave a <a href="./presentations/inria-paris-saclay_03-19_SaumyaJetley">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
 <br/>
 02/19: I will be a visiting researcher at <a href="https://five.ai/">FiveAI</a> starting this month.
 <br/>
@@ -346,6 +346,8 @@ These results present key implications for future efforts to construct neural ne
         <div class="my-auto">
         <h2 class="mb-5">Talks</h2>
         <p class="lead mb-5">
+03/19: I gave a <a href="./presentations/inria-paris-saclay_03-19_SaumyaJetley">talk</a> at the <a href="https://tao.lri.fr/tiki-index.php">TAO team - INRIA-Paris Saclay</a>, <a href="https://tao.lri.fr/tiki-index.php?page=Seminar05022019">details</a>.
+<br/>
 12/18: Invited student talk on <i>robustness properties of classification CNNs</i> at <a href="https://www.wadhwaniai.org/">AI Wadhwani Institute, Mumbai</a>. Slide here.
 <br/>
 10/18: Invited student talk on <i>my research work and academic journey</i> at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.
