made project pages - added the sts++, reference and project page

--- a/startbootstrap-personal-profile/bibs/sts++.html
+++ b/startbootstrap-personal-profile/bibs/sts++.html
@@ -51,24 +51,26 @@ a.sidemenu.onView {
 </style>
 
 </head>
-  
-    
 
 <body>
 
-<div class="w3-main" style="margin-left:100px; margin-right:100px">
- <header class="w3-container w3-xlarge">
-    <h3 class="mb-5"><strong>Human Saliency Estimation</strong></h3>
-	</br>
-    <img src="../projects/saliency-estimation.png" width="35%">
-    <p class="mb-3" style="font-size:70%; font-family:Times New Roman;" align="justify"> <br/> 
-	In this work, we introduce a new saliency map model which formulates a map as a generalized Bernoulli distribution. We then train a deep architecture to predict such maps using novel loss functions which pair the softmax activation function with measures designed to compute distances between probability distributions. We show in extensive experiments the effectiveness of such loss functions over standard ones on four public benchmark datasets, and demonstrate improved performance over state-of-the-art saliency methods. 
-	<br/> 
-	[<a href="https://ieeexplore.ieee.org/document/7780989">paper</a>]
-    [<a href="https://github.com/saumya-jetley/cd_Saliency_PDP">code</a>]
-    [<a href="https://www.youtube.com/watch?v=H9CSwiY_ApU">video</a>]
-    </p>
-</header>	
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:150px">
+@article{DBLP:journals/corr/abs-1905-11358,
+  author    = {Laurynas Miksys and
+               Saumya Jetley and
+               Michael Sapienza and
+               Stuart Golodetz and
+               Philip H. S. Torr},
+  title     = {Straight to Shapes++: Real-time Instance Segmentation Made More Accurate},
+  journal   = {CoRR},
+  volume    = {abs/1905.11358},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1905.11358},
+  archivePrefix = {arXiv},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1905-11358},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+} 
 </div>
 
 </body>
