--- a/startbootstrap-personal-profile/projects/Project1-PrototypicalPriors.html
+++ b/startbootstrap-personal-profile/projects/Project1-PrototypicalPriors.html
@@ -56,9 +56,9 @@ a.sidemenu.onView {
 
 <div class="w3-main" style="margin-left:100px; margin-right:100px">
  <header class="w3-container w3-xlarge">
-    <h3 class="mb-5"><strong>Leveraging Prototypical Priors</strong></h3>
+    <h3 class="mb-5"><strong>Prototypical Priors: From Improving Classification to Zero-Shot Learning</strong></h3>
 	</br>
-    <img src="../projects/prototypical_priors-1.png" width="50%">
+    <img src="./prototypical_priors-1.png" width="50%">
     <p class="mb-3" style="font-size:70%; font-family:Times New Roman;" align="justify"> <br/> 
 	Recent works on zero-shot learning make use of side information such as visual attributes or natural language semantics to define the relations between output visual classes and then use these relationships to draw inference on new unseen classes at test time. In a novel extension to this idea, we propose the use of visual prototypical concepts as side information. For most real-world visual object categories, it may be difficult to establish a unique prototype. However, in cases such as traffic signs, brand logos, flags, and even natural language characters, these prototypical templates are available and can be leveraged for an improved recognition performance. Using prototypes as prior information, the deepnet pipeline learns the input image projections into the prototypical embedding space subject to minimization of the final classification loss. Based on our experiments, prototypical embeddings incorporated in a conventional convolutional neural network improve the recognition performance. The same system can be directly deployed to draw inference on unseen classes by simply adding the prototypical information for these new classes at test time.
 	<br/> 
