--- a/startbootstrap-personal-profile/projects/Project3-StraightToShapes.html
+++ b/startbootstrap-personal-profile/projects/Project3-StraightToShapes.html
@@ -56,9 +56,9 @@ a.sidemenu.onView {
 
 <div class="w3-main" style="margin-left:100px; margin-right:100px">
  <header class="w3-container w3-xlarge">
-    <h3 class="mb-5"><strong>Real-time Instance Segmentation</strong></h3>
+    <h3 class="mb-5"><strong>Straight to Shapes: Real-time Detection of Encoded Shapes</strong></h3>
 	</br>
-    <img src="../projects/straight_to-shapes.png" width="50%">
+    <img src="./straight_to-shapes.png" width="50%">
     <p class="mb-3" style="font-size:70%; font-family:Times New Roman;" align="justify"> <br/> 
 	In this work, we propose to directly regress to objects' shapes in addition to the object bounding boxes and categories. It is crucial to find an appropriate shape representation that is compact and decodable, and in which objects can be compared for higher-order concepts such as view similarity, pose variation and occlusion. To achieve this, we use a denoising convolutional auto-encoder to establish an embedding space, and place the decoder after a fast end-to-end network trained to regress directly to the encoded shape vectors. This yields what to the best of our knowledge is the first real-time shape prediction network, running at ~35 FPS on a high-end desktop, that additionally generalises to unseen categories. 
 	<br/> 
