--- a/startbootstrap-personal-profile/projects/Project5-WithFriendsLikeThese.html
+++ b/startbootstrap-personal-profile/projects/Project5-WithFriendsLikeThese.html
@@ -58,7 +58,7 @@ a.sidemenu.onView {
  <header class="w3-container w3-xlarge">
     <h3 class="mb-5"><strong>With Friends Like These, Who Needs Adversaries?</strong></h3>
 	</br>
-    <img src="../projects/traces-1.png" width="50%">
+    <img src="./traces-1.png" width="90%">
     <p class="mb-3" style="font-size:70%; font-family:Times New Roman;" align="justify"> <br/> 
 This work performs a principled analysis of the class decision functions learned by classification CNNs by contextualising an existing geometrical framework for network decision boundary analysis. 
 Our research uncovers some very intriguing yet simplistic facets of the class score functions learned by these networks that explain their adversarial vulnerability.
