added the link to the NIPS code and the recommendation from wizmann institute

--- a/startbootstrap-personal-profile/projects/Project5-WithFriendsLikeThese.html
+++ b/startbootstrap-personal-profile/projects/Project5-WithFriendsLikeThese.html
@@ -71,8 +71,9 @@ Moreover, if the attack is optimised to take into account the suppression of dim
 These results present key implications for future efforts to construct neural nets that are both accurate and robust to adversarial attack.
 <br/> 
 [<a href="https://arxiv.org/abs/1807.04200">paper</a>]
-[<a >code</a>]
+[<a href="https://github.com/torrvision/whoneedsadversaries">code</a>]
 [<a href="https://www.youtube.com/watch?v=hOQdyInhYi0">video</a>]
+[<a href="http://www.wisdom.weizmann.ac.il/~/vision/courses/2019_2/ADLV/topics.html">Recommendation</a>]
     </p>
 </header>	
 </div>
