--- a/startbootstrap-personal-profile/projects/Project5-WithFriendsLikeThese.html
+++ b/startbootstrap-personal-profile/projects/Project5-WithFriendsLikeThese.html
@@ -73,7 +73,7 @@ These results present key implications for future efforts to construct neural ne
 [<a href="https://arxiv.org/abs/1807.04200">paper</a>]
 [<a href="https://github.com/torrvision/whoneedsadversaries">code</a>]
 [<a href="https://www.youtube.com/watch?v=hOQdyInhYi0">video</a>]
-[<a href="http://www.wisdom.weizmann.ac.il/~/vision/courses/2019_2/ADLV/topics.html">Recommendation</a>]
+[<a href="http://www.wisdom.weizmann.ac.il/~/vision/courses/2019_2/ADLV/topics.html">recommendation</a>]
     </p>
 </header>	
 </div>
