in action - removed

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -329,7 +329,7 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
 <br/>
 06/17: Gave a <i>demo of our instance segmentation technology</i> at the <a href="http://www.spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision Workshop</a> in London.
 <br/>
-03/17: Invited student talk on <i>real-time instance segmentation in action</i> at the <a href="http://workshops.inf.ed.ac.uk/deep/deep2017/">Deep Learning Workshop'17</a> in Edinburgh. <a href="https://www.youtube.com/watch?v=sTCY4JWPI4I">Recording</a>, <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing"> slides</a>, and <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">demo</a>.
+03/17: Invited student talk on <i>real-time instance segmentation</i> at the <a href="http://workshops.inf.ed.ac.uk/deep/deep2017/">Deep Learning Workshop'17</a> in Edinburgh. <a href="https://www.youtube.com/watch?v=sTCY4JWPI4I">Recording</a>, <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing"> slides</a>, and <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">demo</a>.
 <br/>
 
     </p>
