--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
           <h1 class="mb-0">Saumya
             <span class="text-primary">Jetley</span>
           </h1>
-          <div class="lead mb-5">Department of Engineering Science, University of Oxford - OX1 3PJ
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:name@email.com">sjetley@robots.ox.ac.uk</a>
+          <div class="lead mb-5">TAU Team, INRIA-Paris Saclay
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:name@email.com">saumya.jetley@inria.fr</a>
           </div>
           <p class="lead mb-5">
-            I joined <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr's lab</a> at the university of Oxford as a masters (by research) student in Oct'14. By the end of a year, I had successfully transferred to a full-time PhD position fully supported by the <a href=https://cordis.europa.eu/project/rcn/110460_en.html style="text-decoration:none">ERC grant HELIOS</a>. I published 5 first-author publications during the course of my PhD and recently submitted my thesis titled - 'Use and Examination of CNNs for Scene Understanding.' My research focuses on applying deep convolutional networks to vision problems and studying the interpretability and robustness properties of these networks in this regime. 
-<br/><br/>
-In my spare time I run coding workshops for kids aged 9-12, write poetry, read semi-fictions, cook Indian curries and train in the classical Indian dance form of Bharatnatyam.
+            I am a postdoc under Michele Sebag at the TAU Team, INRIA-Paris Saclay. I work on causal inference in the context of French job market, alongside the industrial partner QAPA, and on covid-related privacy-preserving predictive analysis for French hospital data. Previously, I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a>.
+			
+			My research work so far has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder, have published several papers in top-tier CV and ML conferences, was selected for the FDL NASA programme 2019, and was an invited panel member for FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Deep Learning Edinburg, ML Indaba), and am grateful to have been an invited speaker at institutes such AI Wadhwani institute, ISI Kolkata, IIT Kharagpur, INRIA Paris (Willow Team), INRIA Paris Saclay (TAO Team). 
+
+			As a member of several initiatives to encourage STEM education, I have frequently conducted coding sessions and educational talks for school students at Science festivals and organised learning events for families and adults in Science museums. Over the years, I have enjoyed pursuing scientific ideas for impact design and value discovery for different communities and continue to do so.
 </p>
 
           <div class="social-icons">
