--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:name@email.com">saumya.jetley@inria.fr</a>
           </div>
           <p class="lead mb-5">
-            I am a postdoc under Michele Sebag at the TAU Team, INRIA-Paris Saclay. I work on causal inference in the context of French job market, alongside the industrial partner QAPA, and on covid-related privacy-preserving predictive analysis for French hospital data. Previously, I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a>.
+            I am a postdoc under Michele Sebag at the TAU Team, INRIA-Paris Saclay. I work on causal inference in the context of French job market, alongside the industrial partner QAPA, and on privacy-preserving predictive analysis for French covid data. I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University.
 			
-			My research work so far has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder, have published several papers in top-tier CV and ML conferences, was selected for the FDL NASA programme 2019, and was an invited panel member for FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Deep Learning Edinburg, ML Indaba), and am grateful to have been an invited speaker at institutes such AI Wadhwani institute, ISI Kolkata, IIT Kharagpur, INRIA Paris (Willow Team), INRIA Paris Saclay (TAO Team). 
-
+			<br/><br/>
+			My research work has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder, have <a href=https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en style="text-decoration:none">published several papers in top-tier CV and ML conferences</a>, was selected for the FDL NASA programme 2019, and was an invited panel member for FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Deep Learning Edinburg, ML Indaba), and am grateful to have been an invited speaker at institutes such AI Wadhwani institute, ISI Kolkata, IIT Kharagpur, INRIA Paris Central, INRIA Paris Saclay. 
+			
+			<br/><br/>
 			As a member of several initiatives to encourage STEM education, I have frequently conducted coding sessions and educational talks for school students at Science festivals and organised learning events for families and adults in Science museums. Over the years, I have enjoyed pursuing scientific ideas for impact design and value discovery for different communities and continue to do so.
 </p>
 
